--- a/flex.html
+++ b/flex.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Flex</title>
+    <link rel="stylesheet" href="styles/flex.css">
 </head>
 <body>
-    <h2>Flexible Flex</h2>
-    .container{
+    <h1>Flexible Flex</h1>
+    <div class="container">
         <div class="box">
             <h2>First Box</h2>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis ratione laborum nostrum iure, perferendis dignissimos quaerat consectetur enim accusamus minima tenetur doloribus itaque sapiente necessitatibus eaque velit nulla rerum odio.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis ratione laborum nostrum iure, perferendis dignissimos quaerat consectetur enim accusamus minima tenetur doloribus itaque sapiente necessitatibus eaque velit nulla rerum odio.
         </div>
         <div class="box">
             <h2>Second Box</h2>
             Eveniet ipsam animi incidunt at quas et, dolor odio deleniti dolorem rerum officia, obcaecati, soluta eum recusandae blanditiis pariatur rem placeat ullam debitis magnam repellendus voluptatum facere excepturi reiciendis? Minus!
+            Eveniet ipsam animi incidunt at quas et, dolor odio deleniti dolorem rerum officia, obcaecati, soluta eum recusandae blanditiis pariatur rem placeat ullam debitis magnam repellendus voluptatum facere excepturi reiciendis? Minus!
+        </div>
+    </div>
+        <div class="container2">
+            <div class="item">item- 1</div>
+            <div class="item">item- 2</div>
+            <div class="item">item- 3</div>
+            <div class="item">item- 4</div>
+            <div class="item">item- 5</div>
+            <div class="item">item- 6</div>
+            <div class="item">item- 7</div>
+            <div class="item">item- 8</div>
+            <div class="item">item- 9</div>
+            <div class="item">item- 10</div>
         </div>
 </body>
 </html>
